@@ -586,7 +586,7 @@ BOOL CALLBACK dialog_fullscreen_proc(HWND hwnd, UINT msg, WPARAM wparam,
 
     switch (msg) {
       case WM_NOTIFY:
-        if (((NMHDR FAR *)lparam)->code == PSN_APPLY) {
+        if (((NMHDR FAR *)lparam)->code == (UINT)PSN_APPLY) {
             fullscreen_dialog_end();
             SetWindowLong(hwnd, DWL_MSGRESULT, FALSE);
             return TRUE;
