@@ -29,9 +29,9 @@
 #include "raster-sprite.h"
 
 
-void raster_sprite_reset(raster_sprite_t *s)
+void raster_sprite_reset(raster_sprite_t *s, int sprite_offset)
 {
-    s->x = 8;
+    s->x = sprite_offset;
     s->y = 0;
     s->x_expanded = 0;
     s->y_expanded = 0;
